--- a/friends.html
+++ b/friends.html
@@ -132,7 +132,7 @@
                     </ul>
                     <div class="title txt-c">
                         <img class="rad-half mt-15" src="images/friend-01.jpg" alt="">
-                        <h4 class="fs-15 mt-20 mb-5">Omar Fathy</h4>
+                        <h4 class="fs-15 mt-20 mb-5">Abdallah Amin</h4>
                         <p class="c-grey fs-14 mt-0 mb-20">JavaScript Developer</p>
                     </div>
                     <div class="icons p-relative pt-20 pb-20">
